<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fhict.eventsurf.eventsurf.SignIn">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/hello_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/hello_message" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/action_sign_out"
        app:layout_constraintBaseline_toBaselineOf="@+id/phototake"
        app:layout_constraintEnd_toStartOf="@+id/upload"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/phototake"
        tools:text="@string/action_sign_out" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="307dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:srcCompat="@drawable/common_google_signin_btn_icon_light_normal_background" />

    <Button
        android:id="@+id/phototake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"

        android:background="@color/background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/take_photo_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/take_photo_action" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"

        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/save_action" />
</android.support.constraint.ConstraintLayout>
